test/parsing/errors/cannotAttachPragmas.chpl
pragma "do not RVF"
writeln("test");
